Additionally optimizations and safeguards